--- a/POSVTAV4/POS_RUTA_PROVSOFT_V4_DESC.html
+++ b/POSVTAV4/POS_RUTA_PROVSOFT_V4_DESC.html
@@ -670,21 +670,26 @@ function rellenarTicket(v){
   });
 }
 
-// ==== Impresión de ticket estilado ====
+// ==== Impresión de ticket estilado – Compatible con RawBT y Redlemon ====
 function imprimirTicketEstilado() {
   const t = document.getElementById("ticketArea");
 
-  // 🔸 1. InnerPrinter (POS Android)
+  // 🔊 Beep POS (si el dispositivo tiene altavoz o buzzer)
+  try { new Audio("data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAESsAACJWAAACABAAZGF0YQAAAAA=").play(); } catch(e){ console.warn("Sin beep disponible:", e); }
+
+  // 🖨️ 1. InnerPrinter (algunos POS Android integran esta API)
   if (window.InnerPrinter) {
     try {
       if (typeof window.InnerPrinter.printText === "function") {
         const texto = t.innerText.replace(/\n\s*\n/g, "\n");
         window.InnerPrinter.printText(texto);
+        console.log("🖨️ Impresión enviada a InnerPrinter");
         return;
       }
       if (typeof window.InnerPrinter.printHtml === "function") {
         const html = `<html><head><meta charset='utf-8'></head><body>${t.innerHTML}</body></html>`;
         window.InnerPrinter.printHtml(html);
+        console.log("🖨️ Impresión enviada a InnerPrinter (HTML)");
         return;
       }
     } catch (e) {
@@ -692,15 +697,22 @@ function imprimirTicketEstilado() {
     }
   }
 
-  // 🔸 2. RawBT (Android)
+  // 🖨️ 2. RawBT (Android / Bluetooth)
   if (/Android/i.test(navigator.userAgent)) {
     try {
-      const textoPlano = t.innerText.replace(/\n\s*\n/g, "\n");
+      // Convertimos ticket a texto plano limpio
+      let textoPlano = t.innerText.replace(/\n\s*\n/g, "\n").trim();
+      textoPlano = textoPlano.replace(/\t/g, " ").replace(/ +/g, " ");
+      textoPlano = "\n" + textoPlano + "\n\n\n"; // margenes finales
+
       const blob = new Blob([textoPlano], { type: "text/plain" });
       const reader = new FileReader();
+
       reader.onload = () => {
         const base64 = reader.result.split(",")[1];
-        window.location.href = `rawbt:text,${base64}`;
+        const rawbtUrl = `rawbt:text,${base64}`;
+        window.location.href = rawbtUrl;
+        console.log("🖨️ Ticket enviado a RawBT correctamente");
       };
       reader.readAsDataURL(blob);
       return;
@@ -709,7 +721,8 @@ function imprimirTicketEstilado() {
     }
   }
 
-  // 🔸 3. Impresión normal navegador
+  // 🖨️ 3. Impresión normal del navegador (PC o escritorio)
+  console.log("🖨️ Impresión mediante navegador estándar");
   window.print();
 }
 
