--- a/BOTSINVTEL/panel_fijacion_control.html
+++ b/BOTSINVTEL/panel_fijacion_control.html
@@ -114,6 +114,8 @@ async function guardarArticulo() {
   }
 }
 
+// Hacer accesible la función al botón HTML
+window.guardarArticulo = guardarArticulo;
     
   </script>
 
