--- a/POSVTAV2/monitor_ventas_ruta_movil.html
+++ b/POSVTAV2/monitor_ventas_ruta_movil.html
@@ -4,10 +4,17 @@
   <meta charset="UTF-8">
   <title>Monitor de Ventas – Ruta Móvil | PROVSOFT</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- =====================================================
+       🧩 BLOQUE 1: FUENTES + LIBRERÍAS FIREBASE
+       ===================================================== -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 
+  <!-- =====================================================
+       🎨 BLOQUE 2: ESTILOS GENERALES DEL PANEL
+       ===================================================== -->
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -26,7 +33,7 @@
       text-align: center;
       margin-bottom: 20px;
     }
-    input[type="date"], button {
+    input[type="date"], select, button {
       padding: 10px 14px;
       border-radius: 8px;
       border: none;
@@ -34,7 +41,7 @@
       font-family: 'Poppins', sans-serif;
       cursor: pointer;
     }
-    input[type="date"] { margin-right: 10px; }
+    input[type="date"], select { margin-right: 10px; }
     button {
       background: #00416A;
       color: white;
@@ -81,14 +88,33 @@
   </style>
 </head>
 <body>
+
+  <!-- =====================================================
+       🧾 BLOQUE 3: ENCABEZADO PRINCIPAL
+       ===================================================== -->
   <h2>🧾 Monitor de Ventas – Ruta Móvil | PROVSOFT</h2>
 
+  <!-- =====================================================
+       🔍 BLOQUE 4: FILTROS DE BÚSQUEDA (FECHA + USUARIO)
+       ===================================================== -->
   <div class="filtro-fecha">
-    <label>Filtrar por fecha: </label>
+    <label>📅 Fecha: </label>
     <input type="date" id="fechaFiltro">
-    <button onclick="cargarVentas()">Mostrar todas</button>
+    <label>👤 Usuario: </label>
+    <select id="usuarioFiltro">
+      <option value="">Todos</option>
+      <option value="ALAN">ALAN</option>
+      <option value="CARLOS">CARLOS</option>
+      <option value="DAVID">DAVID</option>
+      <option value="GERARDO">GERARDO</option>
+      <!-- agrega aquí los usuarios que tengas en tu colección -->
+    </select>
+    <button onclick="cargarVentas()">Filtrar</button>
   </div>
 
+  <!-- =====================================================
+       📋 BLOQUE 5: TABLA PRINCIPAL DE VENTAS
+       ===================================================== -->
   <table id="tablaVentas">
     <thead>
       <tr>
@@ -102,13 +128,25 @@
     <tbody></tbody>
   </table>
 
+  <!-- =====================================================
+       💰 BLOQUE 6: TOTAL GENERAL MOSTRADO ABAJO
+       ===================================================== -->
   <div id="totalVentas"></div>
 
+  <!-- =====================================================
+       🧩 BLOQUE 7: PIE DE PÁGINA / FIRMA PROVSOFT
+       ===================================================== -->
   <div class="footer">
     PROVSOFT © 2025 – Sistema Monitor de Ventas Ruta Móvil
   </div>
 
+  <!-- =====================================================
+       ⚙️ BLOQUE 8: LÓGICA JAVASCRIPT PRINCIPAL
+       ===================================================== -->
   <script>
+    // =====================================================
+    // 🔥 SECCIÓN 1: CONFIGURACIÓN FIREBASE
+    // =====================================================
     const firebaseConfig = {
       apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
       authDomain: "inventariopv-643f1.firebaseapp.com",
@@ -117,32 +155,49 @@
       messagingSenderId: "96242533231",
       appId: "1:96242533231:web:aae75a18fbaf9840529e9a"
     };
-
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
+    // =====================================================
+    // 🧠 SECCIÓN 2: REFERENCIAS DEL DOM (ELEMENTOS HTML)
+    // =====================================================
     const tablaBody = document.querySelector("#tablaVentas tbody");
     const fechaInput = document.getElementById("fechaFiltro");
+    const usuarioInput = document.getElementById("usuarioFiltro");
     const totalDiv = document.getElementById("totalVentas");
 
+    // =====================================================
+    // 📦 SECCIÓN 3: FUNCIÓN PRINCIPAL cargarVentas()
+    // =====================================================
     async function cargarVentas() {
       tablaBody.innerHTML = "<tr><td colspan='5'>Cargando ventas...</td></tr>";
       totalDiv.textContent = "";
 
       const fecha = fechaInput.value;
-      let query = db.collection("rutas_venta").orderBy("fecha", "desc");
+      const usuario = usuarioInput.value;
 
-      const snapshot = await query.get();
-      let totalGeneral = 0;
-      tablaBody.innerHTML = "";
+      let query = db.collection("rutas_venta");
 
-      snapshot.forEach((doc) => {
-        const data = doc.data();
+      // 📅 Filtrado por fecha (si se selecciona)
+      if (fecha) query = query.where("fecha", "==", fecha);
 
-        if (!fecha || data.fecha === fecha) {
+      // 👤 Filtrado por usuario (si se selecciona)
+      if (usuario) query = query.where("atendio", "==", usuario);
+
+      // 📋 Orden descendente por fecha
+      query = query.orderBy("fecha", "desc");
+
+      try {
+        const snapshot = await query.get();
+        let totalGeneral = 0;
+        tablaBody.innerHTML = "";
+
+        snapshot.forEach((doc) => {
+          const data = doc.data();
           const total = parseFloat(data.total || 0);
           totalGeneral += total;
 
+          // 🧱 Crear fila dinámica
           const row = document.createElement("tr");
           row.innerHTML = `
             <td>${data.cliente || "—"}</td>
@@ -152,16 +207,24 @@
             <td><button class="btn-delete" onclick="eliminarVenta('${doc.id}')">Eliminar</button></td>
           `;
           tablaBody.appendChild(row);
+        });
+
+        // 🔎 Sin resultados
+        if (tablaBody.innerHTML === "") {
+          tablaBody.innerHTML = "<tr><td colspan='5'>No hay ventas registradas</td></tr>";
         }
-      });
 
-      if (tablaBody.innerHTML === "") {
-        tablaBody.innerHTML = "<tr><td colspan='5'>No hay ventas registradas</td></tr>";
+        // 💰 Mostrar total
+        totalDiv.textContent = `💰 Total general: $${totalGeneral.toFixed(2)}`;
+      } catch (error) {
+        console.error(error);
+        tablaBody.innerHTML = "<tr><td colspan='5'>❌ Error al cargar ventas</td></tr>";
       }
-
-      totalDiv.textContent = `💰 Total general: $${totalGeneral.toFixed(2)}`;
     }
 
+    // =====================================================
+    // 🗑️ SECCIÓN 4: FUNCIÓN eliminarVenta(id)
+    // =====================================================
     async function eliminarVenta(id) {
       const conf1 = confirm("¿Seguro que deseas eliminar esta venta?");
       if (!conf1) return;
@@ -178,7 +241,11 @@
       }
     }
 
+    // =====================================================
+    // ⚡ SECCIÓN 5: EVENTOS AUTOMÁTICOS
+    // =====================================================
     fechaInput.addEventListener("change", cargarVentas);
+    usuarioInput.addEventListener("change", cargarVentas);
     window.onload = cargarVentas;
   </script>
 </body>
